# mockbox

./: README.md
server/: Cargo.toml
server/assets/: example.txt
server/src/: main.rs
ui/src/: App.js
